# lwm2m-signalk-wakaama

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  lwm2mclient_gps  plain.sh  plainbg.sh  signalK_client  wakaama.cmake
core/: observe.c
examples/client/common/: lwm2mclient.c  lwm2mclient.h  object_location.c  wakaama_logger.c
examples/client/udp/: CMakeLists.txt
examples/myclient/: CMakeLists.txt  CTestTestfile.cmake  bridge_object.c  bridge_object.h  main.c  object_3300.c  object_security.c  object_server.c  object_test.c  signalk_ws.c  signalk_ws.h  signalk_ws_old.c.md
examples/myclient/wakaama_lib/: CTestTestfile.cmake
examples/myclient/wakaama_lib/tests/: CTestTestfile.cmake
examples/signalk-lwm2m-client/: .gitignore  OLD ROADMAP.md  OLD TESTING.md  README.md  README_RECONNECTION.md  ROADMAP.md  STATUS.md
examples/signalk-lwm2m-client/base64/: base64.c  base64.h
examples/signalk-lwm2m-client/common/: bridge_object.c  hardware_info.c  hardware_info.h  lwm2m_connection.c  lwm2m_connection.h  lwm2mclient.c  lwm2mclient.h  object_3300.c  object_actuation.c  object_actuation.h  object_device.c  object_energy.c  object_energy.h  object_generic.c  object_generic_sensor.c  object_location.c  object_power_measurement.c  object_power_measurement.h  signalk_auth.c  signalk_auth.h  wakaama_logger.h
examples/signalk-lwm2m-client/raw_block1/: CMakeLists.txt
examples/signalk-lwm2m-client/tests/: .gitignore  CMakeLists.txt  bridge_object_mock.c  bridge_object_mock.h  bridge_object_tests.c  bridge_object_tests_new.c  invalid_test.json  marine_bridge_tests.c  marine_test_mocks.h  marine_test_utils.c  marine_tests.h  run_tests.sh  signalk_test_utils.h  test_basic.c  test_bridge_object.c  test_bridge_object_cunit.c  test_bridge_object_runner.c  test_bridge_objects.c  test_bridge_simple.c  test_configuration.c  test_error_handling.c  test_framework.h  test_hotreload.c  test_integration.c  test_ipso_objects.c  test_json_config.c  test_main.c  test_marine_sensors.c  test_reconnect.c  test_reconnection.c  test_signalk_auth.c  test_signalk_connection.c  test_signalk_control.c  test_subscriptions.c  test_websocket_cunit.c  test_websocket_runner.c  test_websocket_simple.c  todo.txt  websocket_mock.c  websocket_mock.h
examples/signalk-lwm2m-client/tests/mocks/: bridge_object_mock.c  sensor_mock.c  signalk_mock.c  websocket_mock.c
examples/signalk-lwm2m-client/tinydtls/: CMakeLists.txt
examples/signalk-lwm2m-client/udp/: CMakeLists.txt  README-Configuration.md  build.sh  run_wakaama_tests.sh  settings.json
examples/signalk-lwm2m-client/websocket_client/: AUTHENTICATION.md  AUTHENTICATION_STATUS.md  CMakeLists.txt  README_CONFIG_INHERITANCE.md  README_HOTRELOAD.md  README_JSON_CONFIG.md  README_SIGNALK_PUT.md  TESTING.md  TESTING_REPORT.md  bridge_object_mock.c  bridge_object_mock.h  invalid_test.json  run_tests.sh  settings.json  settings_auth_test.json  signalk_auth.c  signalk_config_inheritance.h  signalk_control.c  signalk_control.h  signalk_hotreload.c  signalk_hotreload.h  signalk_reconnect.c  signalk_reconnect.h  signalk_subscriptions.c  signalk_subscriptions.h  signalk_ws.c  signalk_ws.c.with_auth  signalk_ws.h  signalk_ws_corrupted.c  signalk_ws_simple.c  test_auth  test_auth_standalone.c  test_bridge_object_cunit.c  test_bridge_object_runner.c  test_error_handling.c  test_hotreload.c  test_json_config.c  test_reconnect.c  test_signalk_control.c  test_subscriptions.c  (+4 more)
examples/signalk-lwm2m-client/websocket_client/tests/: .gitignore  run_tests.sh  test_basic.c
myclient/: main.c  object_device.c  signalk_ws.c
src/: object_signalk.c  signalK_client.c  signalK_observe.c  signalK_observe.h
tests/: CTestTestfile.cmake  core_logging_tests.c  lwm2munittests
